fixes contact card line spacing.

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ body {
     font-size: 14px;
     line-height: 5px;
     padding-top: 0px;
+    margin-top: 15px;
 }
 
 footer {
